Bug 961959: fix profiler breakage for the Nuwa process. r=khuey,benwa